<resources>
    <string name="app_name">Riderz Drivers</string>

    <!-- Global components -->
    <string name="default_error_text">No errors</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="confirm_button_global">CONFIRM</string>
    <string name="cancel_button_global">CANCEL</string>

    <!-- RiderzDrivers components -->
    <string name="login_button">LOGIN</string>
    <string name="register_button">REGISTER</string>
    <string name="forgot_button">FORGOT PASSWORD</string>

    <!-- ResetPasswordVerification components -->
    <string name="title_activity_reset_password_verification">Verify Your Credentials</string>
    <string name="confirm_button">VERIFY</string>

    <string name="title_activity_driver_trip_form">Driver Trip Form</string>
    <string name="startlocation_hint">Enter Start Address</string>
    <string name="endlocation_hint">Enter End Address</string>
    <string name="newtrip_button">Create Trip</string>
    <string name="addTrip">Add New Trip</string>
    <string name="starttime_hint">hh:mm:ss</string>
    <string name="numberseats_hint">Enter Number of Seats</string>
    <string name="startdate_hint">YYYY-MM-DD</string>
    <string name="title_activity_driver_profile">DriverProfile</string>
    <string name="title_activity_maps">Map</string>

    <!-- GoogleMaps components -->
    <string name="title_activity_maps_drivers">Map</string>
    <string name="search_hint_start">Find Starting Location</string>
    <string name="confirmation">See Itinerary</string>
    <string name="finalize">Finalize Trip</string>
    <string name="search_hint_end">Find Dropoff Location</string>


    <!-- ResetPassword components -->
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="reset_button">RESET PASSWORD</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>

    <!-- ModifyEmail components -->
    <string name="title_activity_modify_email">Modify Email</string>
    <string name="modify_email_hint">New Email Address</string>
    <string name="change_email_button">CHANGE EMAIL</string>

    <!-- ModifyContact components -->
    <string name="title_activity_modify_contact">Modify Contact Information</string>
    <string name="modify_phone_hint">New Phone Number</string>
    <string name="change_phone_button">CHANGE NUMBER</string>

    <!-- ModifyCar components -->
    <string name="title_activity_modify_car">Modify Car Information</string>
    <string name="make_hint">Make</string>
    <string name="model_hint">Model</string>
    <string name="year_hint">Manufacturing Year</string>
    <string name="seats_hint">Number of Seats</string>
    <string name="fuel_efficiency_hint">Fuel Efficiency</string>
    <string name="license_plate_hint">License Plate Number</string>
    <string name="change_car_button">UPDATE INFORMATION</string>

    <!-- MainNavigation components -->
    <string name="title_activity_main_navigation">Riderz Drivers</string>

    <!-- EditTrip components -->
    <string name="title_activity_edit_trip">Modify Trips</string>

    <!-- EditTrip template components -->
    <string name="title_activity_edit_trip_template">Modify Trip</string>
    <string name="starting_address_hint">Starting Address</string>
    <string name="starting_time_hint">YYYY-MM-DD HH:MM:SS</string>
    <string name="ending_address_hint">Ending Address</string>
    <string name="ending_time_hint">YYYY-MM-DD HH:MM:SS</string>

    <!-- PastTrip components -->
    <string name="title_activity_past_trip">Past Trips</string>

    <!-- Settings components -->
    <string name="title_activity_settings">Settings</string>

    <!-- About components -->
    <string name="title_activity_about">About</string>

    <!-- Action bar -->
    <string name="action_logout">Logout</string>


    <!-- SignUpDriver components -->
    <string name="email">Email address</string>
    <string name="phonenumber">Phone Number</string>
    <string name="username">Username</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="verify_password">Verify Password</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="car_manufacturer">Car Make</string>
    <string name="car_model">Car Model</string>
    <string name="car_model_year">Car Model Year</string>
    <string name="seats_available">Seats Available</string>
    <string name="gaz_per_kilometer_l_km">Fuel efficiency (L/100km)</string>
    <string name="license_plate">License Plate #</string>

</resources>
