<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpPassengers" tools:layout_editor_absoluteY="25dp">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/signUpFirstName"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/textbox_height"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="12dp"
                android:ems="10"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                android:maxLength="@integer/maximum_first_name_length"
                app:layout_constraintBottom_toTopOf="@+id/signUpLastName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/signUpLastName"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/textbox_height"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                android:maxLength="@integer/maximum_last_name_length"
                app:layout_constraintBottom_toTopOf="@+id/signUpUsername"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpFirstName" />

            <EditText
                android:id="@+id/signUpUsername"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/textbox_height"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:maxLength="@integer/maximum_username_length"
                app:layout_constraintBottom_toTopOf="@+id/signUpPhoneNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpLastName" />

            <EditText
                android:id="@+id/signUpPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/textbox_height"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="@integer/maximum_phone_length"
                app:layout_constraintBottom_toTopOf="@+id/signUpPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpUsername" />

            <EditText
                android:id="@+id/signUpPassword"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/textbox_height"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="@integer/maximum_password_length"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/signUpVerifyPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpPhoneNumber" />

            <EditText
                android:id="@+id/signUpVerifyPassword"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/textbox_height"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:ems="10"
                android:hint="@string/verify_password"
                android:inputType="textPassword"
                android:maxLength="@integer/maximum_password_length"
                app:layout_constraintBottom_toTopOf="@+id/signUpEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpPassword" />

            <EditText
                android:id="@+id/signUpEmail"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/textbox_height"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="@integer/maximum_email_length"
                app:layout_constraintBottom_toTopOf="@+id/signUpError"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpVerifyPassword" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/signUpButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpError">

                <Button
                    android:id="@+id/signUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/signUpError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/default_error_text"
                android:textColor="@color/errorColor"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/signUpButtonLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpEmail" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>