<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".driverTripForm"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/driverformtitle"
        android:layout_width="238dp"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:text="Driver Trip Form"
        android:textColor="@color/darkAccent"
        android:textSize="32sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/startlocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter start location here:"
        android:textColor="@color/darkAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/startlocation_form"
        app:layout_constraintStart_toStartOf="@+id/startlocation_form"
        app:layout_constraintTop_toBottomOf="@+id/driverformtitle" />

    <EditText
        android:id="@+id/startlocation_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:hint="@string/startlocation_hint"
        app:layout_constraintBottom_toTopOf="@+id/endlocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startlocation" />

    <TextView
        android:id="@+id/endlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter end location here:"
        android:textColor="@color/darkAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/endlocation_form"
        app:layout_constraintStart_toStartOf="@+id/endlocation_form"
        app:layout_constraintTop_toBottomOf="@+id/startlocation_form" />

    <EditText
        android:id="@+id/endlocation_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/endlocation_hint"
        app:layout_constraintBottom_toTopOf="@+id/starttime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endlocation" />

    <TextView
        android:id="@+id/starttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter start time here:"
        android:textColor="@color/darkAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/starttime_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endlocation_form" />

    <EditText
        android:id="@+id/starttime_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:hint="@string/starttime_hint"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starttime" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:layout_marginBottom="216dp"
        android:layout_marginStart="9dp"
        android:onClick="newTrip"
        android:text="@string/newtrip_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/starttime"
        app:layout_constraintTop_toBottomOf="@+id/starttime_form" />

</android.support.constraint.ConstraintLayout>